@@ -12,9 +12,14 @@ my %args = (
     NAME                 => 'Acme::CPANAuthors::EU',
     VERSION_FROM         => 'lib/Acme/CPANAuthors/EU.pm',
     ABSTRACT_FROM        => 'lib/Acme/CPANAuthors/EU.pm',
-    PREREQ_PM            => {'Acme::CPANAuthors::Register' => 0,  
-                             'strict'                      => 0,  
-                             'warnings'                    => 0,  
+    PREREQ_PM            => {'Acme::CPANAuthors::Register'   => 0,  
+                             'Acme::CPANAuthors::Austrian'   => 0,
+                             'Acme::CPANAuthors::French'     => 0,
+                             'Acme::CPANAuthors::German'     => 0,
+                             'Acme::CPANAuthors::Italian'    => 0,
+                             'Acme::CPANAuthors::Portuguese' => 0,
+                             'strict'                        => 0,  
+                             'warnings'                      => 0,  
                             }, 
     MIN_PERL_VERSION     =>  5.006,
     AUTHOR               => 'Abigail <cpan@abigail.be>',
